node/4-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
spec:
  selector:
    matchLabels:
      job: say-hello
  template:
    metadata:
      labels:
        job: say-hello
    spec:
      containers:
      - name: hello
        image: joellord/handson-k8s-say-hello
