node/9-adv-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service: 
            name: api
            port: 
              number: 3000
      - path: /()(.*)
        pathType: Prefix
        backend:
          service:
            name: front
            port:
              number: 8080
